K8S/guests-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestnpservice-srv
spec:
  type: NodePort
  selector:
    app: guestservice
  ports:
    - name: guestservice
      protocol: TCP
      port: 8080
      targetPort: 8080
