K8S/reservation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservationservice
  template:
    metadata:
      labels:
        app: reservationservice
    spec:
      containers:
        - name: reservationservice
          image: anidafakic/reservationservice:latest 
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: reservationservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
