K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/guest
            pathType: Prefix
            backend:
              service:
                name: guests-clusterip-srv
                port:
                  number: 8080
          - path: /api/room
            pathType: Prefix
            backend:
              service:
                name: rooms-clusterip-srv
                port:
                  number: 8080
          - path: /reservation
            pathType: Prefix
            backend:
              service:
                name: reservation-clusterip-srv
                port:
                  number: 8080
